# sorg

./: LICENSE  README.md  dune  dune-project  main.ml  sorg.opam  sorg.sh
examples/top-2500/: optimizations.csv  rules.csv  rules.trs
lib/: abstract.ml  ctxt.ml  dune  enc_generalize.ml  generalize.ml  generate.ml  program_schema.ml  rewrite_system.ml  rule.ml  subst.ml  util.ml
test/: dune  test_abstract.ml  test_ctxt.ml  test_generalize.ml  test_generate.ml  test_program_schema.ml  test_rewrite_system.ml  test_rule.ml  test_subst.ml  test_util.ml
