(executables
 (names test_generate test_rule test_rewrite_system test_subst)
 (libraries core ebso oUnit sorg)
 (preprocess (pps ppx_deriving.std))
)

(alias
 (name runtest)
 (deps (:x test_generate.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_rule.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_rewrite_system.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_subst.exe))
 (action (run %{x}))
)
